<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/footer_lodyas"
    tools:context=".MenuActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/menu_header"
        android:text="@string/Menu_title"
        android:textAllCaps="false"
        android:textSize="50dp"
        android:fontFamily="@font/tilttextstyle"
        android:background="?android:selectableItemBackground"
        android:gravity="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:id="@+id/how_to_play"
        android:text="@string/How_to_Play"
        android:textSize="16dp"
        android:fontFamily="@font/tilttextstyle"
        android:background="?android:selectableItemBackground"
        app:layout_constraintTop_toBottomOf="@id/menu_header"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="15dp"/>

    <Button
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:id="@+id/delete_high_score"
        android:text="@string/Delete"
        android:textSize="16dp"
        android:fontFamily="@font/tilttextstyle"
        android:background="?android:selectableItemBackground"
        app:layout_constraintTop_toBottomOf="@id/how_to_play"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="15dp"/>

    <Button
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:id="@+id/version_improvements"
        android:text="@string/Version_improvement"
        android:textSize="16dp"
        android:fontFamily="@font/tilttextstyle"
        android:background="?android:selectableItemBackground"
        app:layout_constraintTop_toBottomOf="@id/delete_high_score"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="15dp"/>

</android.support.constraint.ConstraintLayout>