<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/footer_lodyas"
    tools:context=".EndActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/high_score_display"
        android:text="@string/New_high_score_display"
        android:textSize="45dp"
        android:fontFamily="@font/tilttextstyle"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="15dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/score_display"
        android:text="@string/Score_counter_name"
        android:textSize="50dp"
        android:fontFamily="@font/tilttextstyle"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/high_score_display"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="50dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/score_count_num"
        android:textSize="50dp"
        android:text="0"
        android:fontFamily="@font/tilttextstyle"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/high_score_display"
        app:layout_constraintLeft_toRightOf="@+id/score_display"
        android:layout_marginLeft="10dp" />

    <Button
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:id="@+id/play_again_button"
        android:text="@string/Play_again_button"
        android:textAllCaps="false"
        android:textSize="35dp"
        android:fontFamily="@font/tilttextstyle"
        android:background="?android:selectableItemBackground"
        app:layout_constraintTop_toBottomOf="@+id/score_display"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="10dp"/>

    <Button
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:id="@+id/menu_button"
        android:text="@string/Home_button"
        android:textSize="25dp"
        android:fontFamily="@font/tilttextstyle"
        android:background="?android:selectableItemBackground"
        app:layout_constraintTop_toBottomOf="@id/play_again_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="10dp"/>

</android.support.constraint.ConstraintLayout>