<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/footer_lodyas"
    tools:context=".HowToPlayActivity">

    <ImageView
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:src="@drawable/arrow_blue"
        android:id="@+id/arrow_blue_howtoplay"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="12dp" />

    <ImageView
        android:layout_width="125dp"
        android:layout_height="125dp"
        android:src="@drawable/arrow_green"
        android:id="@+id/arrow_green_howtoplay"
        android:rotation="-90"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginLeft="55dp" />

    <ImageView
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:src="@drawable/arrow_red"
        android:id="@+id/arrow_red_howtoplay"
        android:scaleY="-1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="12dp" />

    <ImageView
        android:layout_width="125dp"
        android:layout_height="125dp"
        android:src="@drawable/arrow_yellow"
        android:id="@+id/arrow_yellow_howtoplay"
        android:rotation="90"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginRight="55dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/How_to_play_instruction"
        android:text="@string/HowToPlay_Instructions"
        android:textSize="30dp"
        android:textAlignment="center"
        android:fontFamily="@font/tilttextstyle"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="40dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/How_to_play_instruction_complete"
        android:text="@string/HowToPlay_InstructionsComplete"
        android:textSize="30dp"
        android:textAlignment="center"
        android:fontFamily="@font/tilttextstyle"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="40dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/How_to_play_instruction_cont"
        android:text="@string/HowToPlay_InstructionsCont"
        android:textSize="20dp"
        android:textAlignment="center"
        android:fontFamily="@font/tilttextstyle"
        app:layout_constraintLeft_toLeftOf="@id/arrow_red_howtoplay"
        app:layout_constraintRight_toRightOf="@id/arrow_red_howtoplay"
        app:layout_constraintBottom_toBottomOf="@id/arrow_red_howtoplay"
        android:layout_marginBottom="50dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/How_to_play_instruction_correct"
        android:text="@string/HowToPlay_InstructionsCorrect"
        android:textSize="20dp"
        android:textAlignment="center"
        android:fontFamily="@font/tilttextstyle"
        android:paddingTop="35dp" />


</android.support.constraint.ConstraintLayout>