<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/footer_lodyas"
    tools:context=".HomeActivity">

    <Button
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:id="@+id/start_button"
        android:text="@string/Start_button_name"
        android:textAllCaps="false"
        android:textSize="50dp"
        android:fontFamily="@font/tilttextstyle"
        android:background="?android:selectableItemBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:id="@+id/options_button"
        android:text="@string/Options_button_name"
        android:textSize="16dp"
        android:fontFamily="@font/tilttextstyle"
        android:background="?android:selectableItemBackground"
        app:layout_constraintTop_toBottomOf="@id/start_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="40dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Version_name"
        android:textSize="7dp"
        android:fontFamily="@font/tilttextstyle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="2dp"
        android:layout_marginRight="2dp"
        />

    <!--Arrows-->
    <ImageView
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:src="@drawable/arrow_blue"
        android:id="@+id/arrow_blue"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="12dp"/>

    <ImageView
        android:layout_width="125dp"
        android:layout_height="125dp"
        android:src="@drawable/arrow_green"
        android:id="@+id/arrow_green"
        android:rotation="-90"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginLeft="55dp"/>

    <ImageView
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:src="@drawable/arrow_red"
        android:id="@+id/arrow_red"
        android:scaleY="-1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="12dp"/>

    <ImageView
        android:layout_width="125dp"
        android:layout_height="125dp"
        android:src="@drawable/arrow_yellow"
        android:id="@+id/arrow_yellow"
        android:rotation="90"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginRight="55dp"/>


</android.support.constraint.ConstraintLayout>